# pkgsrc-local

./: README  import-package.sh
0ad/: Makefile  distinfo
0ad-data/: Makefile
3dpong/: Makefile  PLIST  distinfo
USD/: Makefile  distinfo
accelerator3d/: Makefile  distinfo
adaptagrams/: Makefile
afternoonstalker/: Makefile
agm/: Makefile  PLIST  distinfo
amoebax/: DESCR  Makefile  PLIST  distinfo
archc/: Makefile  distinfo
armagetronad/: Makefile  Makefile.common  PLIST  distinfo
armagetronad-server/: Makefile  Makefile.common
atanks/: Makefile  distinfo
barony/: Makefile
barrage/: Makefile
bazel/: DESCR  Makefile  distinfo
brlcad/: Makefile  distinfo
btanks/: Makefile  distinfo
calamares/: Makefile  distinfo
chakracore/: Makefile  distinfo
chromium/: Makefile  distinfo
chromium-browser/: Makefile  distinfo
chromium-browser/patches/: patch-base_process_process__handle__netbsd.cc  patch-base_process_process__iterator__netbsd.cc  patch-base_process_process__metrics__netbsd.cc  patch-base_sys__info__netbsd.cc  patch-base_trace__event_malloc__dump__provider.cc  patch-base_trace__event_process__memory__dump.cc  patch-build_build__config.h  patch-build_config_BUILDCONFIG.gn  patch-tools_gn_args.cc  patch-tools_gn_bootstrap_bootstrap.py  patch-tools_gn_variables.cc
cint/: Makefile  distinfo
covered/: Makefile  PLIST  distinfo
djvu2pdf/: DESCR  Makefile  PLIST  distinfo
dynamorio/: Makefile  distinfo
edb-debugger-git/: Makefile  PLIST  distinfo
eventql/: DESCR  Makefile  distinfo
flatzebra/: Makefile
fsmon/: Makefile  (+1 more)
(+470 files in other folders)
